[gd_scene load_steps=20 format=3 uid="uid://cisua77clo721"]

[ext_resource type="Script" path="res://data/enemies/hunter.gd" id="1_6kumw"]
[ext_resource type="Texture2D" uid="uid://crgoujb0rkmwk" path="res://image/enemies/hunter/parts/torso.png" id="2_rnx0c"]
[ext_resource type="Texture2D" uid="uid://bq5wdmllowcef" path="res://image/enemies/hunter/parts/leg_front_inner.png" id="3_molbh"]
[ext_resource type="Texture2D" uid="uid://6s35bt48x7kx" path="res://image/enemies/hunter/parts/leg_front_outer.png" id="4_iym5n"]
[ext_resource type="Texture2D" uid="uid://xc30fw0i58ay" path="res://image/enemies/hunter/parts/claw.png" id="4_rfgpu"]
[ext_resource type="Texture2D" uid="uid://d1d2ms7kfbqr4" path="res://image/enemies/hunter/parts/head.png" id="5_nchyn"]
[ext_resource type="Texture2D" uid="uid://ctpn7ku471ny0" path="res://image/enemies/hunter/parts/leg_back_inner.png" id="6_6b8wn"]
[ext_resource type="Texture2D" uid="uid://bhxngntlm80st" path="res://image/enemies/hunter/parts/leg_back_outer.png" id="7_r7k55"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pnk86"]
radius = 36.0
height = 332.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7xt1y"]
radius = 80.0062

[sub_resource type="CircleShape2D" id="CircleShape2D_dxiw0"]
radius = 2135.11

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_qsh5r"]
resource_name = "Front Right Leg"
target_nodepath = NodePath("../Targets/FrontRight")
flip_bend_direction = true
joint_one_bone_idx = 1
joint_one_bone2d_node = NodePath("Torso/FrontRightLeg")
joint_two_bone_idx = 2
joint_two_bone2d_node = NodePath("Torso/FrontRightLeg/FrontRightClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_fs63q"]
resource_name = "Front Left Leg"
target_nodepath = NodePath("../Targets/FrontLeft")
joint_one_bone_idx = 3
joint_one_bone2d_node = NodePath("Torso/FrontLeftLeg")
joint_two_bone_idx = 4
joint_two_bone2d_node = NodePath("Torso/FrontLeftLeg/FrontLeftClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_jeod5"]
resource_name = "Back Right Leg"
target_nodepath = NodePath("../Targets/BackRight")
joint_one_bone_idx = 6
joint_one_bone2d_node = NodePath("Torso/BackRightLeg")
joint_two_bone_idx = 7
joint_two_bone2d_node = NodePath("Torso/BackRightLeg/BackRightClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_dxqjm"]
resource_name = "Back Left Leg"
target_nodepath = NodePath("../Targets/BackLeft")
flip_bend_direction = true
joint_one_bone_idx = 8
joint_one_bone2d_node = NodePath("Torso/BackLeftLeg")
joint_two_bone_idx = 9
joint_two_bone2d_node = NodePath("Torso/BackLeftLeg/BackLeftClaw")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_rmumf"]
resource_local_to_scene = true
enabled = true
modification_count = 4
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_qsh5r")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_fs63q")
modifications/2 = SubResource("SkeletonModification2DTwoBoneIK_jeod5")
modifications/3 = SubResource("SkeletonModification2DTwoBoneIK_dxqjm")

[sub_resource type="Animation" id="Animation_ct7o8"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Torso/Head/LeftClaw:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.349066, 0.261799, 0.523599, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Torso/Head/RightClaw:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, -0.261799, -0.523599, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_s2he7"]
resource_name = "walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Targets/FrontLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-75, -275), Vector2(-75, -225), Vector2(-75, -275), Vector2(-75, -225), Vector2(-75, -275), Vector2(-75, -225), Vector2(-75, -275)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Targets/FrontRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(75, -225), Vector2(75, -275), Vector2(75, -225), Vector2(75, -275), Vector2(75, -225), Vector2(75, -275), Vector2(75, -225)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Targets/BackLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-100, 50), Vector2(-100, 100), Vector2(-100, 50), Vector2(-100, 100), Vector2(-100, 50), Vector2(-100, 100), Vector2(-100, 50)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Targets/BackRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(100, 100), Vector2(100, 50), Vector2(100, 100), Vector2(100, 50), Vector2(100, 100), Vector2(100, 50), Vector2(100, 100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c05cc"]
_data = {
"attack": SubResource("Animation_ct7o8"),
"walk": SubResource("Animation_s2he7")
}

[node name="Hunter" type="CharacterBody2D" groups=["Entity"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_6kumw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -69)
shape = SubResource("CapsuleShape2D_pnk86")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -243)
shape = SubResource("CircleShape2D_7xt1y")

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_dxiw0")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Timers" type="Node" parent="."]

[node name="PathTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="AttackTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Skeleton2D" type="Skeleton2D" parent="."]
modification_stack = SubResource("SkeletonModificationStack2D_rmumf")

[node name="Torso" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso"]
position = Vector2(6, 0)
texture = ExtResource("2_rnx0c")

[node name="FrontRightLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(36, -96)
rotation = 0.656666
scale = Vector2(0.999932, 0.999932)
rest = Transform2D(0.791978, 0.610438, -0.610438, 0.791978, 36, -96)

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/FrontRightLeg"]
position = Vector2(25, -35)
texture = ExtResource("3_molbh")

[node name="FrontRightClaw" type="Bone2D" parent="Skeleton2D/Torso/FrontRightLeg"]
position = Vector2(47, -61)
rotation = -1.49376
scale = Vector2(0.99993, 0.99993)
rest = Transform2D(0.0769526, -0.996965, 0.996965, 0.0769526, 47, -61)
auto_calculate_length_and_angle = false
length = 115.0
bone_angle = -60.0

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/FrontRightLeg/FrontRightClaw"]
position = Vector2(44, -36)
texture = ExtResource("4_iym5n")

[node name="FrontLeftLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-39, -94)
rotation = 0.0950472
scale = Vector2(0.999923, 0.999923)
rest = Transform2D(0.99541, 0.0948969, -0.0948969, 0.99541, -39, -94)

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/FrontLeftLeg"]
position = Vector2(-24, -35)
scale = Vector2(-1, 1)
texture = ExtResource("3_molbh")

[node name="FrontLeftClaw" type="Bone2D" parent="Skeleton2D/Torso/FrontLeftLeg"]
position = Vector2(-46, -62)
rotation = 0.462521
scale = Vector2(0.999953, 0.999953)
rest = Transform2D(0.894888, 0.446185, -0.446185, 0.894888, -46, -62)
auto_calculate_length_and_angle = false
length = 115.0
bone_angle = -120.0

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/FrontLeftLeg/FrontLeftClaw"]
position = Vector2(-45, -36)
scale = Vector2(-1, 1)
texture = ExtResource("4_iym5n")

[node name="Head" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(0, -98)
rest = Transform2D(1, 0, 0, 1, 0, -98)
auto_calculate_length_and_angle = false
length = 110.0
bone_angle = -90.0

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(0, -57)
texture = ExtResource("5_nchyn")

[node name="RightClaw" type="Node2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(22, -60)

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/Head/RightClaw"]
position = Vector2(20, -44)
texture = ExtResource("4_rfgpu")

[node name="LeftClaw" type="Node2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(-22, -60)

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/Head/LeftClaw"]
position = Vector2(-21, -43)
scale = Vector2(-1, 1)
texture = ExtResource("4_rfgpu")

[node name="BackRightLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(27, -52)
rotation = -0.460266
scale = Vector2(0.999966, 0.999966)
rest = Transform2D(0.895904, -0.444171, 0.444171, 0.895904, 27, -52)

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/BackRightLeg"]
position = Vector2(19, 32)
texture = ExtResource("6_6b8wn")

[node name="BackRightClaw" type="Bone2D" parent="Skeleton2D/Torso/BackRightLeg"]
position = Vector2(40, 67)
rotation = 0.741962
scale = Vector2(0.99995, 0.99995)
rest = Transform2D(0.737107, 0.675702, -0.675702, 0.737107, 40, 67)
auto_calculate_length_and_angle = false
length = 110.0
bone_angle = 70.0

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/BackRightLeg/BackRightClaw"]
position = Vector2(29, 47)
texture = ExtResource("7_r7k55")

[node name="BackLeftLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-28, -51)
rotation = 1.26228
scale = Vector2(0.999968, 0.999968)
rest = Transform2D(0.303632, 0.952756, -0.952756, 0.303632, -28, -51)

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/BackLeftLeg"]
position = Vector2(-17, 33)
scale = Vector2(-1, 1)
texture = ExtResource("6_6b8wn")

[node name="BackLeftClaw" type="Bone2D" parent="Skeleton2D/Torso/BackLeftLeg"]
position = Vector2(-36, 67)
rotation = -1.6354
scale = Vector2(0.999938, 0.999938)
rest = Transform2D(-0.0645562, -0.997852, 0.997852, -0.0645562, -36, 67)
auto_calculate_length_and_angle = false
length = 115.0
bone_angle = 110.0

[node name="Image" type="Sprite2D" parent="Skeleton2D/Torso/BackLeftLeg/BackLeftClaw"]
position = Vector2(-32, 46)
scale = Vector2(-1, 1)
texture = ExtResource("7_r7k55")

[node name="Targets" type="Node2D" parent="."]

[node name="FrontRight" type="Marker2D" parent="Targets"]
position = Vector2(75, -225)

[node name="FrontLeft" type="Marker2D" parent="Targets"]
position = Vector2(-75, -275)

[node name="BackRight" type="Marker2D" parent="Targets"]
position = Vector2(100, 100)

[node name="BackLeft" type="Marker2D" parent="Targets"]
position = Vector2(-100, 50)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c05cc")
}

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="Timers/PathTimer" to="." method="_on_path_timer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
